--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Author: thwlfu
             <ul class="menu mt-lg-4">
                 <li class="mr-lg-4 mr-3 active"><a href="index.html">Home</a></li>
                 <li class="mr-lg-4 mr-3"><a href="#about">About</a></li>
-                <li class="mr-lg-4 mr-3"><a href="Projects/index.html">Projects</a></li>
+                <li class="mr-lg-4 mr-3"><a href="projects/index.html">Projects</a></li>
                 <li class="mr-lg-4 mr-3"><a href="#gallery">Wallpapers</a></li>
                 <li><a href="#contact"></a></li>
             </ul>
